--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -335,4 +335,7 @@ Click "Yes" to download the new version.</value>
   <data name="MainFileOpenFail" xml:space="preserve">
     <value>Unable to open/save to the specified file path. Please run as an Administrator instead.</value>
   </data>
+  <data name="rename" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rename.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
