--- a/HaRepackerLib/Properties/Resources.ko.resx
+++ b/HaRepackerLib/Properties/Resources.ko.resx
@@ -256,4 +256,7 @@
   <data name="MainTreeAddDirError" xml:space="preserve">
     <value>Couldn't find a parent WzFile to add this WzDirectoryProperty.</value>
   </data>
+  <data name="MainConfirmRename" xml:space="preserve">
+    <value>이름 바꾸기</value>
+  </data>
 </root>
