--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -175,6 +175,9 @@
   <data name="InteractionWzMapleVersionTitle" xml:space="preserve">
     <value>WZ Encryption</value>
   </data>
+  <data name="MainAddTabTitle" xml:space="preserve">
+    <value>Add tab</value>
+  </data>
   <data name="MainAnimationFail" xml:space="preserve">
     <value>这个项目不是动画</value>
   </data>
