--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -341,4 +341,10 @@ Click "Yes" to download the new version.</value>
   <data name="MainAddTabTitle" xml:space="preserve">
     <value>Add Tab</value>
   </data>
+  <data name="orangeMushroom_Jump" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OrangeMushroom\orangeMushroom_Jump.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="orangeMushroom_Stand" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OrangeMushroom\orangeMushroom_Stand.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
