--- a/HaRepackerLib/Properties/Resources.resx
+++ b/HaRepackerLib/Properties/Resources.resx
@@ -259,4 +259,7 @@
   <data name="MainConfirmRename" xml:space="preserve">
     <value>Rename</value>
   </data>
+  <data name="img_default" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_default.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
