Improved copy & paste performance; + some bits for cartesian plane (uncompleted)

--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -464,4 +464,7 @@ Click "Yes" to download the new version.</value>
   <data name="undo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\207px-Circle-undo.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_8800000_attack_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8800000_attack_10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
