Fix localization issue due to accessor level

--- a/HaRepacker/Properties/Resources.ja.resx
+++ b/HaRepacker/Properties/Resources.ja.resx
@@ -372,4 +372,7 @@
   <data name="XmlFilter" xml:space="preserve">
     <value>eXtended Markup Language (*.xml)</value>
   </data>
+  <data name="Subpanel_Loading" xml:space="preserve">
+    <value>読み込み中</value>
+  </data>
 </root>
