--- a/HaRepacker/Properties/Resources.zh-CHT.resx
+++ b/HaRepacker/Properties/Resources.zh-CHT.resx
@@ -367,4 +367,7 @@
   <data name="XmlFilter" xml:space="preserve">
     <value>eXtended Markup Language (*.xml)</value>
   </data>
+  <data name="Subpanel_Loading" xml:space="preserve">
+    <value>請稍等</value>
+  </data>
 </root>
