--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -467,4 +467,7 @@ Click "Yes" to download the new version.</value>
   <data name="_8800000_attack_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8800000_attack_10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Subpanel_Loading" xml:space="preserve">
+    <value>Loading...</value>
+  </data>
 </root>
