--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -479,4 +479,7 @@ Click "Yes" to download the new version.</value>
   <data name="ladyboss_test_attack2_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ladyboss_test_attack2_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExecutingAssemblyError" xml:space="preserve">
+    <value>This is only available under the x86 version of HaRepacker, please get the alternative version.</value>
+  </data>
 </root>
