--- a/HaCreator/Properties/Resources.resx
+++ b/HaCreator/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="mapEditMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mapEditMenu.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="placeholder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\placeholder.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
